src/main.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Fira Sans", Helvetica, sans-serif;
  color: #000;
}

.container {
  padding-top: 50px;
  padding-left: 30px;
  padding-right: 30px;
  margin: 0 auto;
}

form {
  /*border: 1px solid #dfe4ef;*/
}

.accordion {
}

.accordion:first-child {
}

.accordion__label {
  cursor: pointer;
  padding: 15px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 1px solid #dfe4ef;
}

.accordion__label h2 {
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px;
  margin: 0;
}

.accordion__container {
  display: flex;
}

.accordion__btn {
  border: 1.5px solid #dfe4ef;
  border-radius: 50%;
  outline: none;
  background-color: transparent;
  width: 22px;
  height: 22px;
  margin-right: 15px;
  background-image: url("img/arrow-down.svg");
  background-repeat: no-repeat;
  background-position: 50%;
  transition: background-position 0.4s ease;
}

.accordion__btn.active {
  background-image: url("img/arrow-up.svg");
}

.accordion__dragndrop {
  width: 8px;
  height: 15px;
  border: none;
  background-image: url("img/dnd-arrow.svg");
  background-repeat: no-repeat;
  background-size: contain;
  background-color: #fff;
}

.accordion__options {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: max-height 0.2s ease, opacity 0.2s ease;
  padding-left: 15px;
}

.accordion__options.open {
  max-height: 500px;
  opacity: 1;
}

.option {
  padding: 10px 15px;
  border: 1px solid #dfe4ef;
  border-top: 1px solid transparent;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.option h2 {
  font-size: 13px;
  font-style: normal;
  font-weight: 400;
  line-height: 14.04px;
}

